Fix overflow CSS bug causing weirdness on mobile. Change NPM package to lowercase

--- a/content/themes/danielrothenberg/assets/css/main.css
+++ b/content/themes/danielrothenberg/assets/css/main.css
@@ -10,6 +10,7 @@ body {
 
 .content {
 	padding: 20px 0 0 10px;
+	overflow-wrap: break-word;
 }
 
 article {
